Get the event flow working for playlist create and add bulk action to manually trigger

--- a/draft.yaml
+++ b/draft.yaml
@@ -2,6 +2,7 @@ models:
   Playlist:
     name: string
     url: string
+    channels: unsignedInteger default:0
     synced: datetime nullable
     relationships:
       hasMany: Channel, Group
