Comment out Vite port since we're not using Docker for local dev

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - 'host.docker.internal:host-gateway'
         ports:
             - '${APP_PORT:-36400}:36400'
-            - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
             - '${REVERB_PORT:-36800}:${REVERB_PORT:-36800}'
         environment:
             WWWUSER: '${WWWUSER}'
