--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
-            - '${APP_PORT:-36400}:36400'
+            - '${APP_PORT:-36400}:${APP_PORT:-36400}'
             # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
             - '${REVERB_PORT:-36800}:${REVERB_PORT:-36800}'
         environment:
