--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,56 @@
 services:
     m3ueditor.local:
         build:
-            context: './docker/8.4'
+            context: "./docker/8.4"
             dockerfile: Dockerfile
             args:
-                WWWGROUP: '${WWWGROUP}'
-        image: 'sail-8.4/app'
+                WWWGROUP: "${WWWGROUP}"
+        image: "sail-8.4/app"
         extra_hosts:
-            - 'host.docker.internal:host-gateway'
+            - "host.docker.internal:host-gateway"
         ports:
-            - '${APP_PORT:-36400}:${APP_PORT:-36400}'
+            - "${APP_PORT:-36400}:${APP_PORT:-36400}"
             # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-            - '${REVERB_PORT:-36800}:${REVERB_PORT:-36800}'
+            - "${REVERB_PORT:-36800}:${REVERB_PORT:-36800}"
         environment:
-            WWWUSER: '${WWWUSER}'
+            WWWUSER: "${WWWUSER}"
             LARAVEL_SAIL: 1
-            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
-            IGNITION_LOCAL_SITES_PATH: '${PWD}'
+            XDEBUG_MODE: "${SAIL_XDEBUG_MODE:-off}"
+            XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
+            IGNITION_LOCAL_SITES_PATH: "${PWD}"
         volumes:
-            - '.:/var/www/html:cached'
+            # - ".:/var/www/html:cached"
+            - "./storage:/var/www/html/storage"
         networks:
             - sail
-        depends_on: {  }
+        # depends_on:
+        #     - mariadb
+
+    # mariadb:
+    #     image: yobasystems/alpine-mariadb:10
+    #     ports:
+    #         - "${FORWARD_DB_PORT:-3309}:3306"
+    #     environment:
+    #         MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+    #         MYSQL_ROOT_HOST: "%"
+    #         MYSQL_DATABASE: "${DB_DATABASE}"
+    #         MYSQL_USER: "${DB_USERNAME}"
+    #         MYSQL_PASSWORD: "${DB_PASSWORD}"
+    #         MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    #     volumes:
+    #         - "./storage/sail-mariadb:/var/lib/mysql"
+    #         - "./docker/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
+    #     networks:
+    #         - sail
+    #     healthcheck:
+    #         test:
+    #             - CMD
+    #             - mysqladmin
+    #             - ping
+    #             - "-p${DB_PASSWORD}"
+    #         retries: 3
+    #         timeout: 5s
+
 networks:
     sail:
         driver: bridge
