--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
         extra_hosts:
             - "host.docker.internal:host-gateway"
         ports:
-            - "${APP_PORT:-36400}:${APP_PORT:-36400}"
             # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
+            - "${APP_PORT:-36400}:${APP_PORT:-36400}"
             - "${REVERB_PORT:-36800}:${REVERB_PORT:-36800}"
         environment:
             WWWUSER: "${WWWUSER}"
@@ -16,10 +16,10 @@ services:
             XDEBUG_CONFIG: "${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}"
             IGNITION_LOCAL_SITES_PATH: "${PWD}"
         volumes:
-            # - ".:/var/www/html:cached"
-            - "./storage/logs:/var/www/html/storage/logs"
-            - "./database/database.sqlite:/var/www/html/database/database.sqlite"
+            # - "./storage/logs:/var/www/html/storage/logs"
+            # - "./database/database.sqlite:/var/www/html/database/database.sqlite"
             - "./.env:/var/www/html/.env"
+            - "./docker-config:/var/www/config"
         networks:
             - sail
         # depends_on:
@@ -37,8 +37,8 @@ services:
     #         MYSQL_PASSWORD: "${DB_PASSWORD}"
     #         MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     #     volumes:
-    #         - "./storage/sail-mariadb:/var/lib/mysql"
-    #         - "./docker/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
+    #         - "./storage/mariadb/database:/var/lib/mysql"
+    #         - "./docker/mariadb/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh"
     #     networks:
     #         - sail
     #     healthcheck:
