Update cron function

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
         extra_hosts:
             - "host.docker.internal:host-gateway"
         ports:
-            - "${APP_PORT:-36400}:${APP_PORT:-36400}"
             # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-            # - "${REVERB_PORT:-36800}:${REVERB_PORT:-36800}"
+            - "${APP_PORT:-36400}:${APP_PORT:-36400}"
+            - "${REVERB_PORT:-36800}:${REVERB_PORT:-36800}"
         environment:
             WWWUSER: "${WWWUSER}"
             LARAVEL_SAIL: 1
