--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
             - "host.docker.internal:host-gateway"
         ports:
             # - '${VITE_PORT:-5173}:${VITE_PORT:-5173}'
-            # - "${REVERB_PORT:-36800}:${REVERB_PORT:-36800}"
+            - "${REVERB_PORT:-36800}:${REVERB_PORT:-36800}"
             - "${APP_PORT:-36400}:${APP_PORT:-36400}"
         environment:
             WWWUSER: "${WWWUSER}"
