--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -15,6 +15,13 @@ server {
         fastcgi_param QUERY_STRING $query_string;
         include fastcgi_params;
     }
+    location = /xmltv.php {
+        fastcgi_pass 127.0.0.1:${FPMPORT};
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $realpath_root/index.php;
+        fastcgi_param QUERY_STRING $query_string;
+        include fastcgi_params;
+    }
     
     location = /get.php {
         fastcgi_pass 127.0.0.1:${FPMPORT};
