fix: Optimize Xtream API import
Fix out of memory issues with some larger requests, moving to a better JSON parser library

--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
         "php": "^8.2",
         "ashallendesign/short-url": "^8.3",
         "calebporzio/sushi": "^2.5",
-        "cerbero/json-parser": "^1.1",
         "dedoc/scramble": "^0.12.11",
         "dragonmantank/cron-expression": "^3.4",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-settings-plugin": "^3.2",
         "filament/spatie-laravel-tags-plugin": "^3.2",
+        "halaxa/json-machine": "^1.2",
         "hydrat/filament-table-layout-toggle": "^2.0",
         "jeffgreco13/filament-breezy": "^2.6",
         "laravel/framework": "^11.31",
