--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "vite": ">=6.1.6"
     },
     "dependencies": {
-        "@iptv/xmltv": "^1.0.1",
-        "easyqrcodejs": "^4.6.2"
+        "easyqrcodejs": "^4.6.2",
+        "hls.js": "^1.6.7",
+        "mpegts.js": "^1.8.0"
     }
 }
