feat: Add Video.js lib back for better MKV/MP4 support
Enhance the in-app stream player to work with a larger variety of video formats, including the ability to select audio streams when multiple detected.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "easyqrcodejs": "^4.6.2",
         "hls.js": "^1.6.7",
-        "mpegts.js": "^1.8.0"
+        "mpegts.js": "^1.8.0",
+        "video.js": "^8.23.3"
     }
 }
