--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -23,9 +23,14 @@ jobs:
       - name: Build and push amd64
         uses: docker/build-push-action@v5
         with:
+          context: .
           platforms: linux/amd64
           push: true
           tags: sparkison/m3u-editor:dev-amd64
+          build-args: |
+            GIT_BRANCH=${{ github.ref_name }}
+            GIT_COMMIT=${{ github.sha }}
+            GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
           provenance: false
           sbom: false
 
@@ -48,9 +53,14 @@ jobs:
       - name: Build and push arm64
         uses: docker/build-push-action@v5
         with:
+          context: .
           platforms: linux/arm64
           push: true
           tags: sparkison/m3u-editor:dev-arm64
+          build-args: |
+            GIT_BRANCH=${{ github.ref_name }}
+            GIT_COMMIT=${{ github.sha }}
+            GIT_TAG=${{ github.ref_type == 'tag' && github.ref_name || '' }}
           provenance: false
           sbom: false
 
