--- a/.github/workflows/publish_experimental.yml
+++ b/.github/workflows/publish_experimental.yml
@@ -23,6 +23,7 @@ jobs:
       - name: Build and push amd64
         uses: docker/build-push-action@v5
         with:
+          context: .
           platforms: linux/amd64
           push: true
           tags: sparkison/m3u-editor:experimental-amd64
@@ -52,6 +53,7 @@ jobs:
       - name: Build and push arm64
         uses: docker/build-push-action@v5
         with:
+          context: .
           platforms: linux/arm64
           push: true
           tags: sparkison/m3u-editor:experimental-arm64
