--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "filament/filament": "^4.0",
         "filament/spatie-laravel-settings-plugin": "^4.0",
         "filament/spatie-laravel-tags-plugin": "^4.0",
+        "gboquizosanchez/filament-log-viewer": "^2.0",
         "halaxa/json-machine": "^1.2",
         "laravel/framework": "^11.31",
         "laravel/horizon": "^5.30",
