chore: Add ignore warning for ARM64
Since we're not using writes to disk for the Redis instance, we can safely ignore this warning on ARM64

--- a/docker/8.4/redis.conf
+++ b/docker/8.4/redis.conf
@@ -13,3 +13,5 @@ rdbchecksum no
 loglevel notice
 # Disable syslog to avoid system-level warnings
 syslog-enabled no
+# Disable COW warning for ARM64 architecture since we're not using COW
+ignore-warnings ARM64-COW-BUG
