fix: Permissions with Debian container; fix PHP JIT
Disable PCOV and enable JIT for PHP to improve performance, and remove debugging not used for built app

--- a/docker/8.4/php.ini
+++ b/docker/8.4/php.ini
@@ -5,6 +5,7 @@ max_execution_time = 1800
 max_input_time = 900
 memory_limit = 2048M
 variables_order = EGPCS
-pcov.directory = .
+opcache.jit=1235
+opcache.jit_buffer_size=64M
 # output_buffering = Off
 # implicit_flush = On
