--- a/.github/workflows/publish_experimental.yml
+++ b/.github/workflows/publish_experimental.yml
@@ -36,7 +36,7 @@ jobs:
 
   push-arm64:
     name: Publish experimental m3u-editor Docker image (arm64)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
