--- a/.github/workflows/publish_master.yml
+++ b/.github/workflows/publish_master.yml
@@ -48,7 +48,7 @@ jobs:
 
   release-arm64:
     name: Publish m3u-editor Docker image (arm64)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v4
