chore: Prep proxy for logos

--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -31,6 +31,30 @@ server {
         include fastcgi_params;
     }
 
+    # Logo proxy with aggressive caching
+    location /logos/ {
+        # Try to serve from storage first, then fallback to Laravel
+        try_files /storage/logos/$1 @logo_proxy;
+        
+        # Cache logos for 30 days
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000, immutable";
+        
+        # Security headers
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options DENY;
+        
+        access_log off;
+    }
+    
+    location @logo_proxy {
+        fastcgi_pass 127.0.0.1:${FPMPORT};
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $realpath_root/index.php;
+        fastcgi_param REQUEST_URI $request_uri;
+        include fastcgi_params;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
