chore: Update logo proxy routes and functionality

--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -32,9 +32,9 @@ server {
     }
 
     # Logo proxy with aggressive caching
-    location /logos/ {
+    location /logo-proxy/ {
         # Try to serve from storage first, then fallback to Laravel
-        try_files /storage/logos/$1 @logo_proxy;
+        try_files /storage/cached-logos/$1 @logo_proxy;
         
         # Cache logos for 30 days
         expires 30d;
