Custom playlist - View channels within groups from the group page Sort channels within groups by drag/drop and alphabetically

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "easyqrcodejs": "^4.6.2",
         "hls.js": "^1.6.7",
         "mpegts.js": "^1.8.0",
+        "sortablejs": "^1.15.6",
         "video.js": "^8.23.3"
     }
 }
