--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:crond]
-command=/usr/sbin/cron -f
+command=/usr/sbin/crond -f -d 8
 user=root
 autostart=true
 autorestart=true
