feat: Add m3u proxy as an embedded app! 🔗

--- a/.env.example
+++ b/.env.example
@@ -75,7 +75,14 @@ VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
-PROXY_FFMPEG_PATH=
-PROXY_FFMPEG_CODEC_VIDEO=
-PROXY_FFMPEG_CODEC_AUDIO=
-PROXY_FFMPEG_CODEC_SUBTITLES=
+# M3U Proxy Configuration (Python-based streaming proxy)
+# M3U_PROXY_ENABLED=false means use EMBEDDED proxy (default, runs in container)
+# M3U_PROXY_ENABLED=true means use EXTERNAL proxy service (separate container)
+# M3U_PROXY_ENABLED=false             # false/unset = embedded, true = external service
+# M3U_PROXY_HOST=127.0.0.1            # Host for embedded proxy (localhost)
+# M3U_PROXY_PORT=8085                 # Port for embedded proxy (internal)
+
+# M3U_PROXY_URL is auto-set:
+#   - Embedded: ${APP_URL}/m3u-proxy (via nginx reverse proxy)
+#   - External: Set this to your external service URL
+# M3U_PROXY_URL=http://m3u-proxy:8085
