--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -52,6 +52,30 @@ server {
         add_header Cache-Control no-cache;
     }
 
+    # M3U Proxy reverse proxy (embedded mode)
+    # Proxies requests to the Python FastAPI service running on localhost:8085
+    # No trailing slash in proxy_pass means the /m3u-proxy prefix is preserved
+    location /m3u-proxy/ {
+        proxy_pass http://127.0.0.1:${M3U_PROXY_PORT};
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Timeouts for streaming
+        proxy_read_timeout 3600s;
+        proxy_connect_timeout 75s;
+        proxy_send_timeout 3600s;
+        
+        # Buffering settings for streaming
+        proxy_buffering off;
+        proxy_request_buffering off;
+    }
+
     error_page 404 /index.php;
 
     location ~ \.php$ {
