--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -61,3 +61,17 @@ redirect_stderr=false
 stdout_logfile=/var/www/html/storage/logs/queue.log
 stopwaitsecs=3600
 priority=5
+
+;-----------------------------------------
+; M3U Proxy (embedded Python FastAPI proxy service)
+; Starts only if M3U_PROXY_START_EMBEDDED=true (when not using external service)
+;-----------------------------------------
+[program:m3u-proxy]
+command=/opt/m3u-proxy/.venv/bin/python /opt/m3u-proxy/main.py
+user=root
+autostart=%(ENV_M3U_PROXY_START_EMBEDDED)s
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/html/storage/logs/m3u-proxy.log
+priority=6
+environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVEL="%(ENV_M3U_PROXY_LOG_LEVEL)s"
