--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -67,6 +67,31 @@ server {
         proxy_request_buffering off;
     }
 
+    # Websocket reverse proxy for Reverb
+    # Reverb listens for WebSocket connections at /app and API requests at /apps
+    location /app {
+        proxy_pass http://127.0.0.1:${REVERB_PORT};
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+    }
+    
+    location /apps {
+        proxy_pass http://127.0.0.1:${REVERB_PORT};
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+    
     error_page 404 /index.php;
 
     location ~ \.php$ {
