--- a/docker/8.4/nginx/laravel.conf
+++ b/docker/8.4/nginx/laravel.conf
@@ -43,11 +43,12 @@ server {
         log_not_found off;
     }
 
-    # M3U Proxy reverse proxy (embedded mode)
-    # Proxies requests to the Python FastAPI service running on localhost:8085
+    # M3U Proxy reverse proxy (embedded or external mode)
+    # In embedded mode: proxies to localhost:8085 (Python FastAPI service)
+    # In external mode: proxies to external container (e.g., m3u-proxy:38085)
     # No trailing slash in proxy_pass means the /m3u-proxy prefix is preserved
     location /m3u-proxy/ {
-        proxy_pass http://127.0.0.1:${M3U_PROXY_PORT};
+        proxy_pass http://${M3U_PROXY_NGINX_TARGET};
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
