--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -118,7 +118,7 @@ services:
     #       memory: 512M
 
   redis:
-    image: redis:7-alpine
+    image: redis:alpine3.22
     container_name: m3u-proxy-redis
     restart: unless-stopped
     # Optional: Enable persistence
