chore: Update docker compose examples

--- a/docker-compose.proxy-vpn.yml
+++ b/docker-compose.proxy-vpn.yml
@@ -102,6 +102,12 @@ services:
       # Logging
       - LOG_LEVEL=INFO
       
+      # Public URL for re-writing HLS stream URLs
+      # Set this to the public URL of your m3u-editor instance
+      # Replace `m3u-editor` with your actual domain or LAN IP if needed so it is accessible to clients
+      # NOTE: Make sure to add the `/m3u-proxy`
+      - PUBLIC_URL=http://m3u-editor/m3u-proxy  # Change to your public URL if needed
+      
       # Optional: Additional configuration
       # - REDIS_POOL_MAX_CONNECTIONS=50
       # - STREAM_TIMEOUT=300
