chore: Move websockets internal so we don't have to build assets on container start 🎉

--- a/.env.example
+++ b/.env.example
@@ -23,12 +23,17 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
+# ENABLE_POSTGRES=true
+# DB_CONNECTION=pgsql
+# PG_DATABASE=
+# PG_USER=
+# PG_PASSWORD=
 # DB_CONNECTION=pgsql
 # DB_HOST=127.0.0.1
 # DB_PORT=5433
-# DB_DATABASE=m3ue
-# DB_USERNAME=root
-# DB_PASSWORD=root
+# DB_DATABASE=
+# DB_USERNAME=
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -36,7 +41,6 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=reverb
 FILESYSTEM_DISK=local
 
 CACHE_STORE=database
@@ -62,13 +66,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-REVERB_APP_ID=407061
-REVERB_APP_KEY=dtcfxkqulnpevca2imjx
-REVERB_APP_SECRET=ccwywismmznphtfbf7dx
-REVERB_HOST="localhost"
-REVERB_PORT=36800
-REVERB_SCHEME=http
 
 # M3U Proxy Configuration (Python-based streaming proxy)
 # M3U_PROXY_ENABLED=false means use EMBEDDED proxy (default, runs in container)
