chore: Move redis to supervisor from start container
Reduce startup delay and manage process better than running directly. No need to access Redis until running any longer, so we don't need to start it in the start container script

--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -85,3 +85,16 @@ redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/m3u-proxy.log
 priority=6
 environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVEL="%(ENV_M3U_PROXY_LOG_LEVEL)s",API_TOKEN="%(ENV_M3U_PROXY_TOKEN)s",PUBLIC_URL="%(ENV_M3U_PROXY_PUBLIC_URL)s"
+
+;-----------------------------------------
+; Redis
+;-----------------------------------------
+[program:redis]
+command=redis-server /etc/redis/redis.conf
+user=root
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/html/storage/logs/redis.log
+priority=7
+
