--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -84,7 +84,7 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/m3u-proxy.log
 priority=6
-environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVEL="%(ENV_M3U_PROXY_LOG_LEVEL)s",API_TOKEN="%(ENV_M3U_PROXY_TOKEN)s",PUBLIC_URL="%(ENV_M3U_PROXY_PUBLIC_URL)s"
+environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVEL="%(ENV_M3U_PROXY_LOG_LEVEL)s",API_TOKEN="%(ENV_M3U_PROXY_TOKEN)s",PUBLIC_URL="%(ENV_M3U_PROXY_PUBLIC_URL)s",REDIS_HOST="%(ENV_M3U_PROXY_REDIS_HOST)s",REDIS_PORT="%(ENV_M3U_PROXY_REDIS_PORT)s",REDIS_DB="%(ENV_M3U_PROXY_REDIS_DB)s",REDIS_ENABLED="%(ENV_M3U_REDIS_ENABLED)s",ENABLE_TRANSCODING_POOLING="%(ENV_M3U_ENABLE_TRANSCODING_POOLING)s"
 
 ;-----------------------------------------
 ; Redis
