chore: Cleaning up container start and allowing internal Redis instance to be disabled

--- a/docker-compose.proxy.yml
+++ b/docker-compose.proxy.yml
@@ -28,9 +28,10 @@ services:
       
       # Application URL (change to your domain or IP)
       - APP_URL=${APP_URL:-http://localhost}
+      - APP_PORT=${APP_PORT:-36400}
       
-      # PostgreSQL Configuration
-      - ENABLE_POSTGRES=true
+      # Postgres Configuration
+      - ENABLE_POSTGRES=true # Use embedded Postgres, disable to use your own Postgres service
       - PG_DATABASE=${PG_DATABASE:-m3ue}
       - PG_USER=${PG_USER:-m3ue}
       - PG_PASSWORD=${PG_PASSWORD:-changeme}
@@ -43,10 +44,15 @@ services:
       - DB_DATABASE=${PG_DATABASE:-m3ue}
       - DB_USERNAME=${PG_USER:-m3ue}
       - DB_PASSWORD=${PG_PASSWORD:-changeme}
+
+      # Redis configuration
+      - REDIS_ENABLED=false # Disable embedded Redis
+      - REDIS_SERVER_PORT=${REDIS_PORT:-6379}
+      - REDIS_HOST=${REDIS_HOST:-redis}
       
       # M3U Proxy Configuration (External)
-      - M3U_PROXY_ENABLED=true
-      - M3U_PROXY_URL=http://m3u-proxy:8085
+      - M3U_PROXY_ENABLED=true # Enable external m3u-proxy
+      - M3U_PROXY_URL=http://localhost:${PROXY_PORT:-38085}
       - M3U_PROXY_TOKEN=${M3U_PROXY_TOKEN:-changeme}
     volumes:
       # Persistent configuration data
@@ -56,8 +62,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
     ports:
-      - "36400:36400"  # Main application port
-      # - "5432:5432"  # Uncomment to expose PostgreSQL
+      - "${APP_PORT:-36400}:${APP_PORT:-36400}"  # Main application port
+      # - "${PG_PORT:-5432}:${PG_PORT:-5432}"  # Uncomment to expose PostgreSQL
     networks:
       - m3u-network
     depends_on:
@@ -74,10 +80,13 @@ services:
     environment:
       # API Authentication Token (must match M3U_PROXY_TOKEN above)
       - API_TOKEN=${M3U_PROXY_TOKEN:-changeme}
-      
+      - PORT=${PROXY_PORT:-38085}
+
       # Redis Configuration (for stream pooling)
       - REDIS_ENABLED=true
-      - REDIS_URL=redis://redis:6379/0
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_HOST=${REDIS_HOST:-redis}
+      - REDIS_DB=6 # 1-5 used by m3u-editor, so use 6 for m3u-proxy
       - ENABLE_REDIS_POOLING=true
       
       # Logging
@@ -87,7 +96,7 @@ services:
       # Set this to the public URL of your m3u-editor instance
       # Replace `m3u-editor` with your actual domain or LAN IP if needed so it is accessible to clients
       # NOTE: Make sure to add the `/m3u-proxy`
-      - PUBLIC_URL=http://m3u-editor/m3u-proxy  # Change to your public URL if needed
+      - PUBLIC_URL=http://localhost/m3u-proxy  # Change to your public URL if needed
       
       # Note: ROOT_PATH=/m3u-proxy is now the default, no need to set it explicitly
       # Only set ROOT_PATH= (empty) if you need to use the root path instead
@@ -99,7 +108,7 @@ services:
     restart: unless-stopped
     # Don't expose port externally - only accessible via internal network
     # ports:
-    #   - "8085:8085"  # Uncomment only if you need direct external access
+    #   - "${PROXY_PORT:-38085}:${PROXY_PORT:-38085}"  # Uncomment only if you need direct external access
     networks:
       - m3u-network
     depends_on:
@@ -107,10 +116,10 @@ services:
     devices:
       - /dev/dri:/dev/dri
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8085/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: ["CMD", "curl", "-f", "http://localhost:${PROXY_PORT:-38085}/health?api_token=${M3U_PROXY_TOKEN:-changeme}"]
+      interval: 3s
+      timeout: 2s
+      retries: 12
       start_period: 10s
     
     # Optional: Resource limits
@@ -125,7 +134,7 @@ services:
 
   redis:
     image: redis:alpine3.22
-    container_name: m3u-proxy-redis
+    container_name: m3u-redis
     restart: unless-stopped
     # Optional: Enable persistence
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
@@ -135,9 +144,9 @@ services:
       - m3u-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
+      interval: 3s
+      timeout: 2s
+      retries: 12
     
     # Optional: Resource limits
     # deploy:
