--- a/docker/8.4/supervisord.conf
+++ b/docker/8.4/supervisord.conf
@@ -92,7 +92,7 @@ environment=HOST="%(ENV_M3U_PROXY_HOST)s",PORT="%(ENV_M3U_PROXY_PORT)s",LOG_LEVE
 [program:redis]
 command=redis-server /etc/redis/redis.conf
 user=root
-autostart=true
+autostart=%(ENV_REDIS_ENABLED)s
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/redis.log
