--- a/docker-compose.proxy-vpn.yml
+++ b/docker-compose.proxy-vpn.yml
@@ -40,9 +40,10 @@ services:
       
       # Application URL (change to your domain or IP)
       - APP_URL=${APP_URL:-http://localhost}
+      - APP_PORT=${APP_PORT:-36400}
       
-      # PostgreSQL Configuration
-      - ENABLE_POSTGRES=true
+      # Postgres Configuration
+      - ENABLE_POSTGRES=true # Use embedded Postgres, disable to use your own Postgres service
       - PG_DATABASE=${PG_DATABASE:-m3ue}
       - PG_USER=${PG_USER:-m3ue}
       - PG_PASSWORD=${PG_PASSWORD:-changeme}
@@ -55,11 +56,15 @@ services:
       - DB_DATABASE=${PG_DATABASE:-m3ue}
       - DB_USERNAME=${PG_USER:-m3ue}
       - DB_PASSWORD=${PG_PASSWORD:-changeme}
+
+      # Redis configuration
+      - REDIS_ENABLED=false # Disable embedded Redis
+      - REDIS_SERVER_PORT=${REDIS_PORT:-6379}
+      - REDIS_HOST=${REDIS_HOST:-127.0.0.1}
       
-      # M3U Proxy Configuration (External via Gluetun)
-      # IMPORTANT: When m3u-proxy is behind Gluetun, we connect via gluetun container
-      - M3U_PROXY_ENABLED=true
-      - M3U_PROXY_URL=http://127.0.0.1:8085 # Access m3u-proxy via localhost since both use Gluetun's network
+      # M3U Proxy Configuration (External)
+      - M3U_PROXY_ENABLED=true # Enable external m3u-proxy
+      - M3U_PROXY_URL=http://localhost:${PROXY_PORT:-38085}
       - M3U_PROXY_TOKEN=${M3U_PROXY_TOKEN:-changeme}
     volumes:
       # Persistent configuration data
@@ -87,26 +92,28 @@ services:
     # This routes all m3u-proxy traffic through the VPN
     network_mode: "service:gluetun"
     environment:
-      - PORT=8085 # M3U Proxy listening port (change if needed)
       # API Authentication Token (must match M3U_PROXY_TOKEN above)
       - API_TOKEN=${M3U_PROXY_TOKEN:-changeme}
-      
+      - PORT=${PROXY_PORT:-38085}
+
       # Redis Configuration (for stream pooling)
-      # IMPORTANT: Since m3u-proxy uses gluetun's network, it can't use 'redis' hostname
-      # We need to use the Redis container's IP or connect via the m3u-network
-      # Solution: Redis connects to m3u-network, and we use host.docker.internal or static IP
       - REDIS_ENABLED=true
-      - REDIS_URL=redis://127.0.0.1:6379/0
+      - REDIS_PORT=${REDIS_PORT:-6379}
+      - REDIS_HOST=${REDIS_HOST:-127.0.0.1}
+      - REDIS_DB=6 # 1-5 used by m3u-editor, so use 6 for m3u-proxy
       - ENABLE_REDIS_POOLING=true
       
       # Logging
       - LOG_LEVEL=INFO
-      
+
       # Public URL for re-writing HLS stream URLs
       # Set this to the public URL of your m3u-editor instance
       # Replace `m3u-editor` with your actual domain or LAN IP if needed so it is accessible to clients
       # NOTE: Make sure to add the `/m3u-proxy`
-      - PUBLIC_URL=http://m3u-editor/m3u-proxy  # Change to your public URL if needed
+      - PUBLIC_URL=http://localhost/m3u-proxy  # Change to your public URL if needed
+      
+      # Note: ROOT_PATH=/m3u-proxy is now the default, no need to set it explicitly
+      # Only set ROOT_PATH= (empty) if you need to use the root path instead
       
       # Optional: Additional configuration
       # - REDIS_POOL_MAX_CONNECTIONS=50
@@ -123,7 +130,7 @@ services:
 
   redis:
     image: redis:alpine3.22
-    container_name: m3u-proxy-redis
+    container_name: m3u-redis
     network_mode: "service:gluetun"
     restart: unless-stopped
     command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
@@ -141,11 +148,11 @@ services:
       - /dev/net/tun:/dev/net/tun
       - /dev/dri:/dev/dri  # Hardware acceleration for m3u-proxy
     ports:
-      - 36400:36400  # M3U Editor port, change if needed
+      - ${APP_PORT:-36400}:${APP_PORT:-36400}  # M3U Editor port, change if needed
 
       # M3U Proxy port (exposed through Gluetun)
       # Uncomment if you need direct external access to m3u-proxy
-      # - "8085:8085" # Change if needed
+      # - "${PROXY_PORT:-38085}:${PROXY_PORT:-38085}" # Change if needed
       
       # Gluetun control server (optional, for VPN management)
       # - "8000:8000/tcp"  # HTTP control server
